--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
 	"scripts": {
 		"clean": "rimraf ./out/**/*",
 		"build": "tsc",
-		"watch": "tsc -w"
+		"watch": "tsc -w",
+		"package": "vsce package",
+		"publish": "vsce publish"
 	},
 	"devDependencies": {
 		"@types/node": "^17.0.8",
@@ -50,7 +52,8 @@
 		"@types/semver": "^7.3.9",
 		"@types/vscode": "^1.63.1",
 		"rimraf": "^3.0.2",
-		"typescript": "^4.5.4"
+		"typescript": "^4.5.4",
+		"vsce": "^2.6.3"
 	},
 	"dependencies": {
 		"p-limit": "^3.1.0",
