--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
 		"semver": "^7.3.8",
 		"vscode-languageclient": "^7.0.0"
 	},
+	"overrides": {
+		"xml2js": "0.5.0"
+	},
 	"repository": "https://github.com/Netatwork-de/aurelia-lint-vscode.git",
 	"author": "Net at Work GmbH",
 	"license": "Apache-2.0"
